added more photos, and text

--- a/portfolio.css
+++ b/portfolio.css
@@ -3,7 +3,7 @@
 }
 
 .one:visted {
-    color: white;
+    color:silver;
 }
 
 .one:hover {
@@ -24,4 +24,13 @@ body {
 }
 h1 {
     font-size: 60px;
+}
+h2 {
+    font-size: 40px;
+}
+h3 {
+    font-size: 40px;
+}
+h4 {
+    font-size: 40px;
 }
